Fri Apr  9 10:20:55 1993  Jim Kingdon  (kingdon@cygnus.com)

	* printcmd.c (_initialize_printcmd): Clean up docstring for "x"
	(mention 't', remove false thing about 'g' only good with 'f').

	* breakpoint.h: move "struct breakpoint" and friends to top of
	file so that bpstat_find_breakpoint prototype works.

	* solib.c (struct so_list): Add bfd field.
	(solib_map_sections): Leave bfd open and scratch_pathname allocated.
	Put the bfd in bfd field of the so_list.
	(clear_solib): Free bfd name and close_bfd on the bfd.

Fri Apr  9 00:45:41 1993  Per Bothner  (bothner@rtl.cygnus.com)

	* valarith.c (value_subscript):  Add COERCE_REF.
	**** start-sanitize-chill ****
	* ch-exp.y (operand_5):  We can generalize the 2nd operand
	of a string repetition ot 'literal' without ambiguity.
	**** end-sanitize-chill ****

Thu Apr  8 10:15:10 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* breakpoint.h (struct bpstat): Remove momentary field.
	Remove bpstat_momentary_breakpoint.  This was always kludgy
	and is no longer used.

	* breakpoint.h: Add enum bpstat_what.
	breakpoint.h (struct bpstat), breakpoint.c (bpstat_stop_status):
	stop and print fields of bpstat now per-breakpoint, not just
	one for the whole chain.
	breakpoint.{c,h} (bpstat_what): New function.
	breakpoint.h: Remove bpstat_stop and bpstat_should_print.
	infrun.c: Replace switch (stop_bpstat->breakpoint_at->type)
	with call to bpstat_what.
	README: Remove watchpoint/breakpoint bug from known bugs.

	* breakpoint.h: Prototype bpstat_find_breakpoint.

Thu Apr  8 16:01:21 1993  Fred Fish  (fnf@cygnus.com)

	* symtab.c (find_methods, gdb_mangle_name):  Note that functions
	are g++ specific.
	* symtab.h (VTBL_FNADDR_OFFSET, OPNAME_PREFIX_P, VTBL_PREFIX_P,
	DESTRUCTOR_PREFIX_P):  Note that macros are g++ specific.

Thu Apr  8 12:45:32 1993  Ian Lance Taylor  (ian@cygnus.com)

	* i960-pinsn.c (tabent): Copied struct definition from
	opcodes/i960-dis.c.
